# q-prompt

./: LICENSE  README.md  index.html  manager.html  package-lock.json  package.json  vite.config.js
src/: main.js  manager.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  scoring.rs  store.rs  window.rs
