[package]
name = "q-prompt"
version = "0.1.0"
description = "Q-Prompt - Desktop Prompt Toolbar"
authors = ["yangw"]
edition = "2021"

[lib]
name = "q_prompt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
enigo = "0.1"
arboard = "3"
log = "0.4"
simple_logger = "5"
